Bug 1526820 - Handle WM_INITDIALOG in the ColorPicker hook to enable keyboard focus r=cmartin

WM_INITDIALOG is a special case for this hook. Returning TRUE tells it to set they keyboard focus.
In all other cases returning 0 from the hook invokes the standard behavior.

Differential Revision: https://phabricator.services.mozilla.com/D87870